--- a/src/index.css
+++ b/src/index.css
@@ -146,7 +146,6 @@ input:focus {
 }
 
 .btn {
-	color: #fff;
 	border: 0;
 	border-radius: 8px;
 	color: #fff;
@@ -225,4 +224,12 @@ input:focus {
 	.input-group input {
 		width: 80%;
 	}
+}
+
+.about-link svg {
+	background: #6072ff;
+	border-radius: 50%;
+	padding: 9px;
+	height: 43px;
+	width: 43px;
 }
